<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmiFragment">


    <ImageView
        android:id="@+id/bmi_chart"
        android:layout_width="398dp"
        android:layout_height="265dp"
        android:layout_marginTop="94dp"
        android:layout_marginBottom="27dp"
        android:src="@drawable/bmichartsmaller"
        app:layout_constraintBottom_toTopOf="@+id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header"
        android:layout_width="225dp"
        android:layout_height="39dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="93dp"
        android:text="@string/general_info"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fact_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_chart" />

    <TextView
        android:id="@+id/fact_one"
        android:layout_width="381dp"
        android:layout_height="46dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        android:text="@string/bmi_info_one"
        app:layout_constraintBottom_toTopOf="@+id/fact_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/fact_two"
        android:layout_width="381dp"
        android:layout_height="46dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bmi_info_two"
        app:layout_constraintBottom_toTopOf="@+id/fact_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fact_one" />

    <TextView
        android:id="@+id/fact_three"
        android:layout_width="381dp"
        android:layout_height="46dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bmi_info_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fact_two" />

</androidx.constraintlayout.widget.ConstraintLayout>